 * Removed deprecated OptimizationAlgorithm::GetLeastSquaresAlgorithmNames
 * Removed deprecated GaussianNonLinearCalibration,NonLinearLeastSquaresCalibration::set,getAlgorithm
 * Removed deprecated MethodOfMomentsFactory::set,getOptimizationProblem
 * ResourceMap::Set* methods no longer add new keys, the new Add* methods must be used instead

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===
 * #1213 (The legend of the graphics in MetaModelValidation is wrong)
 * #1222 (There is no kriging example based on HMAT)
 * #1331 (FittingTest_BestModelBIC sometimes fail)
 * #1335 (The return of the unsafe ResourceMap)
 * #1337 (The rDiscrete function has no help page)
 * #1349 (Problem in the graph of Histogram)
 * #1351 (Text has a zero size)
 * #1354 (The doc of GeneralizedParetoFactory does not reflect the implementation)
 * #1371 (Memory leak in ot.TruncatedDistribution)
 * #1378 (Kriging-related covariance model weirdness)

== 1.14 release (2019-11-13) == #release-1.14

=== Library ===

==== IMPORTANT: Distributions parametrization changes ====
 * New argument ordering in Frechet ctor: scale(beta), shape(alpha), location(gamma) (swapped alpha and beta)
 * New parametrization in Gumbel: scale(beta), position(gamma) (beta=1/alpha for first argument)
 * New parametrization in Beta: shape(alpha), shape(beta), location(a), location(b) (beta=t-r for second argument)
 * New parametrization in InverseGamma: rate(lambda), shape(k) (swapped arguments)
 * New parametrization in InverseNormal: location(mu), rate(lambda) (swapped arguments)
 * New parametrization in Laplace: mean(mu), rate(lambda) (swapped arguments)
 => One can use "import openturns.shims as ot" to maintain compatibility with older scripts

==== Major changes ====
 * New optimization solvers (Dlib, Bonmin for mixed integer optimization problems)
 * New distributions (SquaredNormal, WeibullMax, Pareto, DiscreteCompoundDistribution, MixedHistogramUserDefined)